# tb2dev

./: README.txt
Android/Sdk/: .knownPackages
Android/Sdk/tools/: package.xml
backend_server/: INSTALL.sh  SETUP.txt  remove_logs.sh
backend_server/SQL/: blank_bot.sql  general.sql
backend_server/apache_ip_block/: am.conf  az.conf  by.conf  ca.conf  kg.conf  tm.conf  ua.conf  us.conf
backend_server/sites-enabled/: bot.conf  cp.conf
backend_server/www/cp/: .htaccess
builder_server/: INSTALL.sh  SETUP.txt  builder.sql
builder_server/sites-enabled/: bild.conf
builder_server/www/app/: gradle-app.setting  gradle.properties  local.properties  make_cert.sh
builder_server/www/builder/: .htaccess  SocksHandler.py  aes.php  app_class.py  config.py  helper_class.py  http_class.py  mysql_class.py  set_template.sh  socks.py  start.py
builder_server/www/module2dex/: README.txt  build_mod.sh  rebuild_all.sh  rebuild_local.sh
frontend_server/: SETUP.txt  setup_client_vps.sh
frontend_server/backend_server/: backend_backup.sh
loader/: INSTALL.txt
loader/bot/: keystore.jks  local.properties
loader/bot/app/: build.gradle  (+1 more)
loader/panel/: apache_loader.conf  db.php  func.php  gate.php
openjdk/: release
socks/socs/: README.txt
socks/socs/linux_server/evserver_src/: CMakeLists.txt  config.json  main.cpp  request.py  server.py  service  socks_redirect_on_clients.txt  test.py  thread.cpp  watch.sh
socks/socs/linux_server/evserver_src/socks/: config.cpp  config.h  server2.cpp  server2.h
socks/socs/linux_server/evserver_src/socks/test/: untitled.cpp
(+578 files in other folders)
